log
Fri 29 Mar 2024 11:44:05 PM UTC: 
 tests:  0|6
total_score: 0/70
c6d3cc2
Fri 29 Mar 2024 11:46:19 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   35 |   lista->head = NULL;
      |   ^~~~~
      |   list
list.c:35:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:33:10: error: unused variable ‘list’ [-Werror=unused-variable]
   33 |   List * list = (List *)malloc(sizeof(List));
      |          ^~~~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e5a4949
Fri 29 Mar 2024 11:46:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7de38cd
Fri 29 Mar 2024 11:47:54 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d478a3e
Fri 29 Mar 2024 11:48:27 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
5b4de9a
Fri 29 Mar 2024 11:49:19 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
febb003
Fri 29 Mar 2024 11:49:29 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
10e4243
Fri 29 Mar 2024 11:50:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
68132c1
Fri 29 Mar 2024 11:50:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a2c1891
Fri 29 Mar 2024 11:51:09 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
cac2cea
Fri 29 Mar 2024 11:51:16 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
872953b
Fri 29 Mar 2024 11:53:00 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
68d0580
Fri 29 Mar 2024 11:53:32 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ac487d5
Fri 29 Mar 2024 11:54:37 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
d517454
Fri 29 Mar 2024 11:55:50 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
2e0e49f
Fri 29 Mar 2024 11:56:30 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
d58575f
Sat 30 Mar 2024 12:02:12 AM UTC: 
 list.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
c7402d7
Sat 30 Mar 2024 12:05:00 AM UTC: 
 list.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
524c978
Sat 30 Mar 2024 12:05:26 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
357469f
Sat 30 Mar 2024 12:08:28 AM UTC: 
 list.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:165:1: error: control reaches end of non-void function [-Werror=return-type]
  165 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9e03ba8
Sat 30 Mar 2024 12:08:41 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
a034896
Sat 30 Mar 2024 12:10:28 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
cdb0cd6
